# Musical_notation_Qt

./: .gitignore  CMakeLists.txt  README.md  barlineitem.cpp  barlineitem.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.cpp  note.h  noteitem.cpp  noteitem.h  test_music  welcomedialog.cpp  welcomedialog.h  welcomedialog.ui
